# investos

./: .gitignore  pyproject.toml
examples/: rank_long_short.ipynb  spo.ipynb
investos/forecastos/: __init__.py  exposure.py  feature.py  forecast.py  global_utils.py  provider.py
investos/forecastos/utils/: feature_engineering_mixin.py  readable.py  saveable.py
investos/portfolio/risk_model/: factor_risk.py
investos/portfolio/strategy/: spo_tranches.py
