[project]
name = "investos"
version = "0.7.0"
description = "Reliable backtesting and portfolio optimization for investors who want to focus on generating alpha"
authors = [
    { name = "Charlie Reese" },
    { name = "ForecastOS" },
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
keywords = [
    "investing",
    "alpha",
    "backtesting",
    "portfolio",
    "optimization",
    "forecastos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "aiobotocore>=2.24.2",
    "cvxpy>=1.7.2",
    "dask>=2024.8.0",
    "dask-cloudprovider>=2022.10.0",
    "numpy>2.0",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "statsmodels>=0.14.5",
]
#forecastos - now included in investos

[project.urls]
Homepage = "https://investos.io/"
Repository = "https://github.com/forecastos/investos"
Documentation = "https://investos.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "scikit-learn>=1.3.0,<2",
    "pyarrow>=21.0.0",
    "matplotlib>=3.9.4",
    "xgboost>=2.1.4",
    "pandas-market-calendars>=5.1.1",
    "plotly>=5.24.1",
    "pytest>=7.4.4",
    "jupyter>=1.1.1",
    "sphinx>=7.4.7",
    "ruff>=0.12.12",
    "jupyterlab>=3.6.8",
]

[tool.hatch.build.targets.sdist]
include = ["investos"]

[tool.hatch.build.targets.wheel]
include = ["investos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
norecursedirs = [
    "__pycache__",
    ".git",
    "docs",
    "examples",
]

[tool.ruff]
target-version = "py38"
extend-include = [
    "*.ipynb",
]
exclude = [
    "__pycache__",
    ".git/",
    ".pytest_cache/",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]  # Only format Jupyter notebooks, for now
select = [
    "B",
    "E",
    "F",
    "I",
    "Q",
    "UP",
    "W",
]
ignore = [
    "B006",  # Mutable argument default
    "B008",  # Function call in default argument
    "E501",  # Line too long 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    'F401',  # Unused import
    'F403',  # Wildcard import
]
